Add footer and footer content

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
 
             <div class="bg-image-cover image-fluid" href="../assets/images"></div>
 
-
-
             <!-------------------- navbar -------------------->
 
             <nav class="navbar navbar-expand-lg navbar-bg-color">
@@ -52,11 +50,9 @@
                         <h2>Sviluppatore Software Inferiore</h2>
                     </div>
                 </div>
-
                 <div class="card p-3" style="width: 21.5rem; height: 18rem;">
                     <a class="profile-logo" href="../assets/images"></a>
                 </div>
-
             </nav>
 
             <!-------------------- Body About -------------------->
@@ -119,109 +115,65 @@
                 </div>
             </section>
 
-
             <!-------------------- Footer -------------------->
+
 
             <footer>
 
-                <div class="row row-cols-1 row-cols-md-3">
-                    <div class="col">
-                        <div class="card-footer-one bg-card-footer-one ">
-                            <div class="card-1-footer h-200 ">
-                                <div class="cards footer-about text-center">
-                                    <h5>Più su di Me</h5>
+                <footer class="main-footer">
+                    <div class="container-flex ">
+                        <div class="row main-footer-container">
+                            <div class="main-footer-col">
+                                <div class="main-footer-col-1">
+                                    <h4>Download
+                                        <p>
+                                            diventare un Full Stack Web Developer. Ho la
+                                            capacità di apprendere e ottenere risultati, non importa quanto grande
+                                            sia
+                                            il
+                                            compito.<br>
+                                            Nel mio viaggio fino ad ora, ho coperto HTML, CSS, Bootstrap e
+                                            recentemente
+                                            mi
+                                            sono avventurato in JavaScript.<br>
+                                            Il mio desiderio di saperne di più è alimentato mentre studio e
+                                            comprendo il
+                                            linguaggio di programmazione, come una sete che non può essere
+                                            placata.<br>Ad
+                                            ogni
+                                            nuovo traguardo ho il desiderio di saperne di più.
+                                            jlkjòljkòlkjòlik
+                                        </p>
+                                    </h4>
+                                </div>
 
-                                    <p class="card-footer-text">
-                                        Sono autodidatta e aspiro a diventare un Full Stack Web Developer. Ho la
-                                        capacità di
-                                        apprendere e ottenere risultati, non importa quanto grande sia il compito.
 
-                                        Nel mio viaggio fino ad ora, ho trattato l'HTML; CSS; Bootstrap e recentemente
-                                        si
-                                        sono
-                                        avventurati in JavaScript e hanno imparato a mettere insieme un buon file
-                                        README.
-
-                                        Trovo che mentre studio e comprendo la sezione del linguaggio di programmazione
-                                        su
-                                        cui
-                                        lavoro, il mio desiderio di saperne di più sembra un prurito che non può essere
-                                        graffiato studia e capisci, il mio desiderio mi ha lasciato con la voglia di
-                                        sapere
-                                        e
-                                        imparare di più.
-                                        (In questa sezione non riesco a trovare le parole corrette)
-
-
-                                        With supporting text below as a natural lead-in to additional content.
-                                    </p>
+                                <div class="main-footer-col">
+                                    <h4>Scaricamento
+                                        <p>
+                                            Hai bisogno di una versione stampabile del mio CV?<br>
+                                            Scaricalo qui.
+                                            <a href="assets/cv/cv-portfolio.pdf" target="_blank" class="cv-pdf">
+                                                <i class="fa fa-download" aria-hidden="true"></i>
+                                                <span class="sr-only">Download link.</span>
+                                            </a>
+                                        </p>
+                                    </h4>
+                                </div>
+                                <div class="main-footer-col main-footer-contact">
+                                    <h4>Seguimi
+                                        <p> <br>
+                                            <a href="#" target="_blank" class="social-link">
+                                                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                                <span class="sr-only">LinkedIn</span>
+                                        </p>
+                                    </h4>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </footer>
 
-
-
-
-
-
-
-
-                    <div class="card-footer text-left">
-                        <div class="card-header-footer">
-                            <ul class="footer">
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="#">Active</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link disabled">Disabled</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title"> Più su di me</h5>
-                            <p class="card-text">
-                                Sono autodidatta e aspiro a diventare un Full Stack Web Developer. Ho la capacità di
-                                apprendere e ottenere risultati, non importa quanto grande sia il compito.
-
-                                Nel mio viaggio fino ad ora, ho trattato l'HTML; CSS; Bootstrap e recentemente si sono
-                                avventurati in JavaScript e hanno imparato a mettere insieme un buon file README.
-
-                                Trovo che mentre studio e comprendo la sezione del linguaggio di programmazione su cui
-                                lavoro, il mio desiderio di saperne di più sembra un prurito che non può essere
-                                graffiato studia e capisci, il mio desiderio mi ha lasciato con la voglia di sapere e
-                                imparare di più.
-                                (In questa sezione non riesco a trovare le parole corrette)
-
-
-                                With supporting text below as a natural lead-in to additional content.
-                            </p>
-
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-
-
-
-
-
-
-
-
-
-                    <div class="main-footer-col">
-                        <h4>Follow Us</h4>
-                        <div class="social-links">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-youtube"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                        </div>
-                    </div>
-            </footer>
         </main>
     </header>
 
