--- a/index.html
+++ b/index.html
@@ -12,170 +12,136 @@
     <title>Cirriculum</title>
 </head>
 
-<body>
+<body class="container-bg">
+    <div class="bg-image-cover image-fluid" href="../assets/images"></div>
 
-    <header class="container-fluid container-bg">
-        <main class="container-flex">
-            <!--  -->
+    <!-------------------- navbar -------------------->
 
-            <div class="bg-image-cover image-fluid" href="../assets/images"></div>
-
-            <!-------------------- navbar -------------------->
-
-            <nav class="navbar navbar-expand-lg navbar-bg-color">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                        <ul class="navbar-nav text-right">
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="curriculum.html">Curriculum</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contatti.html">Contatti</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="scarica.html">Scarica</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="name-title">
-                        <h1>Luigina Argentin</h1>
-                        <h2>Sviluppatore Software Inferiore</h2>
-                    </div>
+    <header class="container-flex">
+        <nav class="navbar navbar-expand-lg navbar-bg-color">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav text-right">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="curriculum.html">Curriculum</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contatti.html">Contatti</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="scarica.html">Scarica</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="card p-3" style="width: 21.5rem; height: 18rem;">
-                    <a class="profile-logo" href="../assets/images"></a>
+                <div class="name-title">
+                    <h1>Luigina Argentin</h1>
+                    <h2>Sviluppatore Software Inferiore</h2>
                 </div>
-            </nav>
-
-            <!-------------------- Body About -------------------->
-            <section>
-                <div class="cards body-about text-center">
-                    <h3>Riguardo a Me</h3>
-                </div>
-
-                <div class="row row-cols-1 row-cols-md-3">
-                    <div class="col">
-                        <div class="card-one bg-card-one ">
-                            <div class="card-1 h-200 ">
-                                <h5 class="card-title">Cosa Posso Fare?</h5>
-                                <p class="card-text">
-                                    Ispirato dalla creatività che c'è nello sviluppo software, ho deciso di fare il
-                                    grande
-                                    passo
-                                    e cambiare carriera nella tecnologia.<br> Attualmente sto studiando HTML da
-                                    autodidatta;
-                                    CSS; Bootstrap, JavaScript e file README.md
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="card-two bg-card-one">
-                            <div class="card-2 h-200">
-                                <h5 class="card-title">
-                                    Il Motivo Per Intraprendere Questo Percorso?
-                                </h5>
-                                <p class="card-text">
-                                    Sono appassionato e dedito a ottenere il meglio che posso. Il duro lavoro e la
-                                    dedizione portano sempre al successo. Non vedo mai la coppa mezza piena, ma la
-                                    vedo
-                                    sempre traboccante. Uno dei miei attributi più forti è il mio atteggiamento
-                                    positivo.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="card-three bg-card-one">
-                            <div class="card-3 h-200">
-                                <h5 class="card-title">
-                                    Perché Dovresti Assumermi?
-                                </h5>
-                                <p class="card-text">
-                                    Sono ambizioso e ho una vasta gamma di esperienze di vita diverse da portare in ogni
-                                    progetto.<br>
-                                    Mi piacciono le sfide e cerco sempre un'opportunità per imparare e migliorare.<br>
-                                    La mia natura responsabile e affidabile è ciò che mi rende perfetto per qualsiasi
-                                    posizione
-                                    poiché sono orgoglioso di tutto ciò che faccio.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <!-------------------- Footer -------------------->
-
-
-            <footer>
-
-                <footer class="main-footer">
-                    <div class="container-flex ">
-                        <div class="row main-footer-container">
-                            <div class="main-footer-col">
-                                <div class="main-footer-col-1">
-                                    <h4>Download
-                                        <p>
-                                            diventare un Full Stack Web Developer. Ho la
-                                            capacità di apprendere e ottenere risultati, non importa quanto grande
-                                            sia
-                                            il
-                                            compito.<br>
-                                            Nel mio viaggio fino ad ora, ho coperto HTML, CSS, Bootstrap e
-                                            recentemente
-                                            mi
-                                            sono avventurato in JavaScript.<br>
-                                            Il mio desiderio di saperne di più è alimentato mentre studio e
-                                            comprendo il
-                                            linguaggio di programmazione, come una sete che non può essere
-                                            placata.<br>Ad
-                                            ogni
-                                            nuovo traguardo ho il desiderio di saperne di più.
-                                            jlkjòljkòlkjòlik
-                                        </p>
-                                    </h4>
-                                </div>
-
-
-                                <div class="main-footer-col">
-                                    <h4>Scaricamento
-                                        <p>
-                                            Hai bisogno di una versione stampabile del mio CV?<br>
-                                            Scaricalo qui.
-                                            <a href="assets/cv/cv-portfolio.pdf" target="_blank" class="cv-pdf">
-                                                <i class="fa fa-download" aria-hidden="true"></i>
-                                                <span class="sr-only">Download link.</span>
-                                            </a>
-                                        </p>
-                                    </h4>
-                                </div>
-                                <div class="main-footer-col main-footer-contact">
-                                    <h4>Seguimi
-                                        <p> <br>
-                                            <a href="#" target="_blank" class="social-link">
-                                                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                                                <span class="sr-only">LinkedIn</span>
-                                        </p>
-                                    </h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </footer>
-
-        </main>
+            </div>
+            <div class="card p-3" style="width: 21.5rem; height: 18rem;">
+                <a class="profile-logo" href="../assets/images"></a>
+            </div>
+        </nav>
     </header>
+
+    <!-------------------- Body About -------------------->
+    <section>
+        <div class="cards body-about text-center">
+            <h3>Riguardo a Me</h3>
+        </div>
+        <div class="row row-cols-1 row-cols-md-3">
+            <div class="col">
+                <div class="card-one bg-card-one ">
+                    <div class="card-1 h-200 ">
+                        <h5 class="card-title">Cosa Posso Fare?</h5>
+                        <p class="card-text">
+                            Ispirato dalla creatività che c'è nello sviluppo software, ho deciso di fare il grande passo
+                            e cambiare carriera nella tecnologia.<br> Attualmente sto studiando HTML da autodidatta;
+                            CSS; Bootstrap, Javascript.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card-two bg-card-one">
+                    <div class="card-2 h-200">
+                        <h5 class="card-title">
+                            Il Motivo Per Intraprendere Questo Percorso?
+                        </h5>
+                        <p class="card-text">
+                            Sono appassionato e dedito a ottenere il meglio che posso.<br> Il duro lavoro e la dedizione
+                            portano sempre al successo.<br> Non vedo mai la tazza mezza piena ma ricaricabile.<br> Uno
+                            dei miei attributi più forti è il mio atteggiamento positivo.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card-three bg-card-one">
+                    <div class="card-3 h-200">
+                        <h5 class="card-title">
+                            Perché Dovresti Assumermi?
+                        </h5>
+                        <p class="card-text">
+                            Sono ambizioso e ho una vasta gamma di esperienze di vita diverse da portare in ogni
+                            progetto.<br>
+                            Mi piacciono le sfide e cerco sempre un'opportunità per imparare e migliorare.<br>
+                            La mia natura responsabile e affidabile è ciò che mi rende perfetto per qualsiasi posizione
+                            poiché sono orgoglioso di tutto ciò che faccio.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-------------------- Footer -------------------->
+
+    <footer class="main-footer">
+        <div class="container">
+            <div class="row main-footer-container">
+                <div class="col-12 col-md-4 main-footer-col-1">
+                    <h4>Più su di Me</h4>
+                    <p>
+                        Sono autodidatta e aspiro a diventare un Full Stack Web Developer. Ho la capacità di apprendere
+                        e ottenere risultati, non importa quanto grande sia il compito.<br>
+                        Nel mio viaggio fino ad ora, ho coperto HTML, CSS, Bootstrap e recentemente mi sono avventurato
+                        in JavaScript.<br>
+                        Il mio desiderio di saperne di più è alimentato mentre studio e comprendo il linguaggio di
+                        programmazione, come una sete che non può essere placata. Ad ogni nuovo traguardo ho il
+                        desiderio di saperne di più.
+                    </p>
+                </div>
+                <div class="col-12 col-md-4  main-footer-col">
+                    <h4>Scarica</h4>
+                    <p>
+                        Hai bisogno di una versione stampabile del mio CV?<br>
+                        Scaricalo qui.
+                        <a href="assets/cv/cv-portfolio.pdf" target="_blank" class="cv-pdf">
+                            <i class="fa fa-download" aria-hidden="true"></i>
+                            <span class="sr-only">Download link.</span>
+                        </a>
+                    </p>
+                </div>
+                <div class="col-12 col-md-4 main-footer-col main-footer-contact">
+                    <h4>Seguimi</h4>
+                    <p>
+                        <a href="#" target="_blank" class="social-link">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
