--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="curriculum.html">Curriculum</a>
+                            <a class="nav-link" href="competenze.html">Competenze</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contatti.html">Contatti</a>
@@ -119,6 +119,15 @@
                         desiderio di saperne di più.
                     </p>
                 </div>
+                <div class="col-12 col-md-4 main-footer-col main-footer-contact">
+                    <h4>Seguimi</h4>
+                    <p>
+                        <a href="#" target="_blank" class="social-link">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </p>
+                </div>
                 <div class="col-12 col-md-4  main-footer-col">
                     <h4>Scarica</h4>
                     <p>
@@ -127,15 +136,6 @@
                         <a href="assets/cv/cv-portfolio.pdf" target="_blank" class="cv-pdf">
                             <i class="fa fa-download" aria-hidden="true"></i>
                             <span class="sr-only">Download link.</span>
-                        </a>
-                    </p>
-                </div>
-                <div class="col-12 col-md-4 main-footer-col main-footer-contact">
-                    <h4>Seguimi</h4>
-                    <p>
-                        <a href="#" target="_blank" class="social-link">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">LinkedIn</span>
                         </a>
                     </p>
                 </div>
