Correct spelling error

--- a/competenze.html
+++ b/competenze.html
@@ -141,7 +141,7 @@
                                 <h4>Posizione</h4>
                                 <p>Salone di bellezza - Titolare</p>
                                 <p>Proprietario della - Istruttore di Nuoto </p>
-                                <p>Direzione Generale</p>
+                                <p>Gestione Generale</p>
                                 <p>Istruttore di Nuoto</p>
                                 <p>Bus Monitor - USA Scuola-Pullman
                                 </p>
