--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <a class="nav-link" href="competenze.html">Competenze</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contatti.html">Contatti</a>
+                                <a class="nav-link" href="contatti.html">Contatto</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="assets/cv/cvitae-italian.pdf" target="_blank">Scarica</a>
@@ -54,7 +54,7 @@
         <!-------------------- Body About -------------------->
         <section>
             <div class="cards body-about text-center">
-                <h3>Riguardo a Me</h3>
+                <h3>Riguardo a Me!</h3>
             </div>
             <div class="row row-cols-1 row-cols-md-3">
                 <div class="col">
@@ -112,7 +112,7 @@
             <div class="container">
                 <div class="row main-footer-container">
                     <div class="col-12 col-md-6 main-footer-col-1">
-                        <h4>Più su di Me</h4>
+                        <h4>Più su di Me!</h4>
                         <p>
                             Sono autodidatta e aspiro a diventare un Full Stack Web Developer. Ho la capacità di
                             apprendere
@@ -126,7 +126,7 @@
                         </p>
                     </div>
                     <div class="col-md-2 main-footer-col-2 main-footer-contact">
-                        <h4>Seguimi</h4>
+                        <h4>Seguimi!</h4>
                         <p class="col-md-4">
                             <a href="#" target="_blank" class="social-link">
                                 <i class="fa fa-linkedin" aria-hidden="true"></i>
@@ -135,7 +135,7 @@
                         </p>
                     </div>
                     <div class="col-md-4 main-footer-col-3">
-                        <h4>Scarica</h4>
+                        <h4>Scarica!</h4>
                         <p>
                             Hai bisogno di una versione stampabile del mio CV?<br>
                             Scaricalo qui.
