--- a/competenze.html
+++ b/competenze.html
@@ -33,7 +33,7 @@
                                 <a class="nav-link" href="competenze.html">Competenze</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contatti.html">Contatti</a>
+                                <a class="nav-link" href="contatti.html">Contatto</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="assets/cv/cvitae-italian.pdf" target="_blank">Scarica</a>
@@ -57,7 +57,7 @@
                 <div class="skill-section-title">
                     <div class="container-fluid">
                         <div class="row skill-title-container skill-title">
-                            <h2>Le Mie Competenze e Attributi</h2>
+                            <h2>Le Mie Competenze e Attributi!</h2>
                         </div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                     <div class="container">
                         <div class="row skill-one-container">
                             <div class="col-12 col-md-6 skill-one-container skill-one">
-                                <h4>Attualmente in Fronte Fine </h4>
+                                <h4>Attualmente in Fronte Fine!</h4>
                                 <p>
                                     Ho lavorato con HTML; CSS; Bootstrap e ho iniziato con JavaScript. Sto ancora
                                     studiando,
@@ -77,7 +77,7 @@
                                 </p>
                             </div>
                             <div class="col col-md-6 skill-two">
-                                <h4>I Miei Attributi Personali</h4>
+                                <h4>I Miei Attributi Personali!</h4>
                                 <ul>
                                     <li>Fluente in inglese, lettura e scrittura</li>
                                     <li>Italiano di base e attualmente in fase di apprendimento</li>
@@ -110,7 +110,7 @@
             <div class="history-heading">
                 <div class="container">
                     <div class="row history-heading text-center">
-                        <h2>Storia Del Lavoro
+                        <h2>Storia Del Lavoro!
                         </h2>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
             <div class="container">
                 <div class="row main-footer-container">
                     <div class="col-12 col-md-6 main-footer-col-1">
-                        <h4>Più su di Me</h4>
+                        <h4>Più su di Me!</h4>
                         <p>
                             Sono autodidatta e aspiro a diventare un Full Stack Web Developer. Ho la capacità di
                             apprendere
@@ -172,7 +172,7 @@
                         </p>
                     </div>
                     <div class="col-md-2 main-footer-col-2 main-footer-contact">
-                        <h4>Seguimi</h4>
+                        <h4>Seguimi!</h4>
                         <p class="col-md-4">
                             <a href="#" target="_blank" class="social-link">
                                 <i class="fa fa-linkedin" aria-hidden="true"></i>
@@ -181,7 +181,7 @@
                         </p>
                     </div>
                     <div class="col-md-4 main-footer-col-3">
-                        <h4>Scarica</h4>
+                        <h4>Scarica!</h4>
                         <p>
                             Hai bisogno di una versione stampabile del mio CV?<br>
                             Scaricalo qui.
