--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <a class="nav-link" href="competenze.html">Competenze</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contatti.html">Contatto</a>
+                                <a class="nav-link" href="contatto.html">Contatto</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="assets/cv/cvitae-italian.pdf" target="_blank">Scarica</a>
