Fix Navbar collapse toggle

--- a/contatto.html
+++ b/contatto.html
@@ -17,17 +17,18 @@
 
         <!-------------------- navbar -------------------->
 
-        <header class="container-flex">
+        <header>
             <nav class="navbar navbar-expand-lg navbar-bg-color">
                 <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                        aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                        <ul class="navbar-nav text-right">
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="competenze.html">Competenze</a>
@@ -44,9 +45,9 @@
                         <h1>Luigina Argentin</h1>
                         <h2>Sviluppatore Software Inferiore</h2>
                     </div>
-                </div>
-                <div class="card p-3" style="width: 21.5rem; height: 18rem;">
-                    <a class="profile-logo" href="../assets/images"></a>
+                    <div class="card" style="width: 550px; height: 350px;">
+                        <a class="navbar-brand profile-logo" href="../assets/images"></a>
+                    </div>
                 </div>
             </nav>
         </header>
